apps-grafana/test-azure-apps/grafana/namespace-patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
  annotations:
    scheduler.alpha.kubernetes.io/node-selector: node_workload_type=core
